show pages for user and pet

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     </head>
 
     <body>
-        <form method="GET" action="http://localhost:3000/users/">
-            Enter your username: <input name="name" type="text" placeholder="username">
+        <form method="GET" action="http://localhost:3001/user/user.html">
+            Enter your Username: <select name="user_id" id="user-select"></select>
             <input type="submit" value="submit">
         </form>
         <form method="POST" action="http://localhost:3000/users">
