--- a/pets/pets.html
+++ b/pets/pets.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pets</title>
-    <script src="showPets.js" defer></script>
+    <script src="pets.js" defer></script>
     <link rel="stylesheet" href="app.css">
 </head>
 <body>
