--- a/index.html
+++ b/index.html
@@ -9,13 +9,25 @@
     </head>
 
     <body>
-        <form method="GET" action="http://localhost:3001/user/user.html">
-            Enter your Username: <select name="user_id" id="user-select"></select>
-            <input type="submit" value="submit">
-        </form>
-        <form method="POST" action="http://localhost:3000/users">
-            Enter New Username: <input name="name" type="text" placeholder="username">
-            <input type="submit" value="Create New User">
-        </form>
+        <header>
+            <a href="/"><img id="home" src="https://static.wikia.nocookie.net/dogelore/images/9/97/Doge.jpg/revision/latest/scale-to-width-down/620?cb=20190205113053"></a>
+        </header>
+        <section id="header">
+            <h1 class="brand">Pet-Renter</h1>
+            <p class="slogan">Money <span class="em">CAN</span> buy happiness!</p>
+        </section>
+        
+        <main>
+            <section class="user-forms"
+                <form class="existing-user" method="GET" action="http://localhost:3001/user/user.html">
+                    Select Your Username: <select name="user_id" id="user-select"></select>
+                    <input type="submit" value="submit">
+                </form>
+                <form class="new-user" method="POST" action="http://localhost:3000/users">
+                    New User? Create a New Username: <input name="name" type="text" placeholder="username">
+                    <input type="submit" value="Create New User">
+                </form>
+            </section>
+        </main>
     </body>
 </html>
