--- a/pet/pet.html
+++ b/pet/pet.html
@@ -5,9 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script defer src="showPet.js"></script>
+    <link rel="stylesheet" href= "../app.css">
 </head>
 <body>
     <h1>Your Pet</h1>
-    <main></main>
+    <main>
+        <form method="POST" action=http://localhost:3000/rentals id= "rental-submission">
+            How many days would you like to rent this pet?<select>
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
+            </select>
+            <input type="submit" value="Rent this Pet!">
+        </form>
+    </main>
 </body>
 </html>
