--- a/user/user.html
+++ b/user/user.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script defer src='./user.js'></script>
+    <link rel="stylesheet" href="../app.css">
 </head>
 <body>
-    <h1>Hello user</h1>
+    <h1 id= "user-greeting"></h1>
     <main>
         <section id="user-history"></section>
     </main>
