Hide input boxes

--- a/pets/pets.html
+++ b/pets/pets.html
@@ -6,6 +6,7 @@
     <title>Pets</title>
     <script src="pets.js" defer></script>
     <link rel="stylesheet" href="../app.css">
+    <link rel="icon" type="image/png" href="https://www.freepngimg.com/download/cat/35425-9-black-cat-transparent.png">
 </head>
 <body>
     <h1>Pets</h1>
