--- a/index.html
+++ b/index.html
@@ -6,9 +6,16 @@
         <title>Pet Rental</title>
         <script src="./index.js" defer></script>
         <link rel="stylesheet" href="./app.css">
+        <link rel="icon" type="image/png" href="https://www.freepngimg.com/download/cat/35425-9-black-cat-transparent.png">
     </head>
 
     <body>
+        <nav>
+            <a href= "./index.html">Home</a>
+            <a href= "./pets/pets.html">Pets</a>
+            <!-- <a>Find a Random Pet</a> -->
+            
+        </nav>
         <form method="GET" action="http://localhost:3001/user/user.html">
             Enter your Username: <select name="user_id" id="user-select"></select>
             <input type="submit" value="submit">
