--- a/pet/pet.html
+++ b/pet/pet.html
@@ -6,6 +6,7 @@
     <title>Document</title>
     <script defer src="showPet.js"></script>
     <link rel="stylesheet" href= "../app.css">
+    <link rel="icon" type="image/png" href="https://www.freepngimg.com/download/cat/35425-9-black-cat-transparent.png">
 </head>
 <body>
     <h1>Your Pet</h1>
