--- a/user/user.html
+++ b/user/user.html
@@ -6,6 +6,7 @@
     <title>Document</title>
     <script defer src='./user.js'></script>
     <link rel="stylesheet" href="../app.css">
+    <link rel="icon" type="image/png" href="https://www.freepngimg.com/download/cat/35425-9-black-cat-transparent.png">
 </head>
 <body>
     <h1 id= "user-greeting"></h1>
