commit for merge

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 
     <body>
         <header>
-            <a href="/"><img id="home" src="https://static.wikia.nocookie.net/dogelore/images/9/97/Doge.jpg/revision/latest/scale-to-width-down/620?cb=20190205113053"></a>
+            <!-- <a href="/"><img id="home" src="https://static.wikia.nocookie.net/dogelore/images/9/97/Doge.jpg/revision/latest/scale-to-width-down/620?cb=20190205113053"></a> -->
+            <a href="/">Home</a>
         </header>
         <section id="header">
             <h1 class="brand">Pet-Renter</h1>
