applies grid to pet cards

--- a/user/user.html
+++ b/user/user.html
@@ -11,7 +11,7 @@
 <body>
     <h1 id= "user-greeting"></h1>
     <main>
-        <section id="user-history"></section>
+        <section class="pet-card"></section>
     </main>
 </body>
 </html>
