--- a/pets/pets.html
+++ b/pets/pets.html
@@ -9,7 +9,10 @@
     <link rel="icon" type="image/png" href="https://www.freepngimg.com/download/cat/35425-9-black-cat-transparent.png">
 </head>
 <body>
-    <h1>Pets</h1>
+    <section id="header">
+        <h1 class="brand">Pet-Renter</h1>
+        <p class="slogan">Money <span class="em">CAN</span> buy happiness!</p>
+    </section>
     <main>
      
     </main>
