adds css to user show page

--- a/user/user.html
+++ b/user/user.html
@@ -5,13 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script defer src='./user.js'></script>
-    <link rel="stylesheet" href="../app.css">
+    <link rel="stylesheet" href="../user/user.css">
     <link rel="icon" type="image/png" href="https://www.freepngimg.com/download/cat/35425-9-black-cat-transparent.png">
 </head>
 <body>
-    <h1 id= "user-greeting"></h1>
+    <section id="header">
+        <h1 class="brand">Pet-Renter</h1>
+        <p class="slogan">Money <span class="em">CAN</span> buy happiness!</p>
+    </section>
+    <section class="history-header"></section>
     <main>
-        <section class="pet-card"></section>
     </main>
+    <footer>
+        <p class="footer-items">Contact</p>
+        <p class="footer-items">Github</p>
+        <p class="footer-items">Authors</p>
+    </footer>
 </body>
 </html>
