--- a/user/user.html
+++ b/user/user.html
@@ -9,6 +9,7 @@
     <link rel="icon" type="image/png" href="https://www.freepngimg.com/download/cat/35425-9-black-cat-transparent.png">
 </head>
 <body>
+    <!--MAKE JS LOGIC FOR NO PETS FOR USER-->
     <section id="header">
         <h1 class="brand">Pet-Renter</h1>
         <p class="slogan">Money <span class="em">CAN</span> buy happiness!</p>
