--- a/pets/pets.html
+++ b/pets/pets.html
@@ -13,8 +13,17 @@
         <h1 class="brand">Pet-Renter</h1>
         <p class="slogan">Money <span class="em">CAN</span> buy happiness!</p>
     </section>
+    <div class="species-form">
+        <form class="species-action" method="GET">
+            <input type="number">
+            <select id="species-select" name="species">
+                <option value="Dog">Dog</option>
+                <option value="Cat">Cat</option>
+            </select>
+            <input type="submit" class="submit" value="Filter Pets">
+        </form>
+    </div>
     <main>
-     
     </main>
 </body>
 </html>
