fixes links, footer, adds no user rental history

--- a/pet/pet.html
+++ b/pet/pet.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <section id="header">
-        <h1 class="brand">Pet-Renter</h1>
+        <h1 class="brand"><a class="link" href="/">Pet-Renter</a></h1>
         <p class="slogan">Money <span class="em">CAN</span> buy happiness!</p>
     </section>
     <main>
@@ -29,7 +29,7 @@
         </div>    
     </main>
     <footer>
-        <p class="footer-items">Contact</p>
+        <p class="footer-items"><a class="link" href="mailto: tjbachorz@gmail.com, boyloe@gmail.com">Contact</a></p>
         <p class="footer-items">Github</p>
         <p class="footer-items">Authors</p>
     </footer>
