--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <body>
         <section id="header">
-            <h1 class="brand">Pet-Renter</h1>
+            <h1 class="brand"><a class="link" href="/">Pet-Renter</a></h1>
             <p class="slogan">Money <span class="em">CAN</span> buy happiness!</p>
         </section>
         
@@ -30,7 +30,7 @@
             </section>
         </main>
         <footer>
-            <p class="footer-items">Contact</p>
+            <p class="footer-items"><a class="link" href="mailto: tjbachorz@gmail.com, boyloe@gmail.com">Contact</a></p>
             <p class="footer-items">Github</p>
             <p class="footer-items">Authors</p>
         </footer>
