--- a/user/user.html
+++ b/user/user.html
@@ -11,14 +11,14 @@
 <body>
     <!--MAKE JS LOGIC FOR NO PETS FOR USER-->
     <section id="header">
-        <h1 class="brand">Pet-Renter</h1>
+        <h1 class="brand"><a class="link" href="/">Pet-Renter</a></h1>
         <p class="slogan">Money <span class="em">CAN</span> buy happiness!</p>
     </section>
     <section class="history-header"></section>
     <main>
     </main>
     <footer>
-        <p class="footer-items">Contact</p>
+        <p class="footer-items"><a class="link" href="mailto: tjbachorz@gmail.com, boyloe@gmail.com">Contact</a></p>
         <p class="footer-items">Github</p>
         <p class="footer-items">Authors</p>
     </footer>
