styles pet filter

--- a/pets/pets.html
+++ b/pets/pets.html
@@ -16,6 +16,7 @@
     <div class="species-form">
         <form class="species-action" method="GET">
             <input class="hidden-input" type="number">
+            <label class="label" for="species-select">What type of pet would you like to rent?:</label>
             <select id="species-select" name="species">
                 <option value="Dog">Dog</option>
                 <option value="Cat">Cat</option>
