--- a/pets/pets.html
+++ b/pets/pets.html
@@ -15,7 +15,7 @@
     </section>
     <div class="species-form">
         <form class="species-action" method="GET">
-            <input class="hidden-input" type="number">
+            <input name="user_id" type="hidden">
             <select id="species-select" name="species">
                 <option value="Dog">Dog</option>
                 <option value="Cat">Cat</option>
