fixes CSS on user page

--- a/user/user.html
+++ b/user/user.html
@@ -9,12 +9,14 @@
     <link rel="icon" type="image/png" href="https://www.freepngimg.com/download/cat/35425-9-black-cat-transparent.png">
 </head>
 <body>
-    <!--MAKE JS LOGIC FOR NO PETS FOR USER-->
     <section id="header">
         <h1 class="brand"><a class="link" href="/">Pet-Renter</a></h1>
         <p class="slogan">Money <span class="em">CAN</span> buy happiness!</p>
     </section>
-    <section class="history-header"></section>
+    <div class="history-header-container">
+        <section class="history-header">
+        </section>
+    </div>
     <main>
     </main>
     <footer>
