--- a/pet/pet.html
+++ b/pet/pet.html
@@ -16,7 +16,8 @@
     <main>
         <div class="rental-form-container">
             <form class="rental-form" method="POST" action=http://localhost:3000/rentals id="rental-submission">
-                <label class="rental-label" for="rental-days">How many days would you like to rent this pet? <p class="max-days">(Maximum: 5 days):</p></label>
+                <label class="rental-label">How many days would you like to rent this pet?</label> 
+                <label class="max-days">(Maximum: 5 days):</p></label>
                 <select id="rental-days">
                     <option class="days-option" value="1" selected>1 day</option>
                     <option class="days-option" value="2">2 days</option>
