--- a/pets/pets.html
+++ b/pets/pets.html
@@ -28,8 +28,10 @@
     </main>
     <footer>
         <p class="footer-items"><a class="link" href="mailto: tjbachorz@gmail.com, boyloe@gmail.com">Contact</a></p>
-        <p class="footer-items">Github</p>
-        <p class="footer-items">Authors</p>
+        <summary class="authors">
+            <p class="footer-items"><span class="authors"><a  href="https://www.linkedin.com/in/tjbachorz/">TJ Bachorz</a></span> -  Authors  - <span class="authors"><a href="https://www.linkedin.com/in/bryan-oyloe">Bryan Oyloe</a></span></p>
+        </summary>
+        <p class="footer-items">Github</p> 
     </footer>
 </body>
 </html>
