--- a/pet/pet.html
+++ b/pet/pet.html
@@ -17,11 +17,12 @@
         <div class="rental-form-container">
             <form class="rental-form" method="POST" action=http://localhost:3000/rentals id="rental-submission">
                 <label class="rental-label">How many days would you like to rent this pet?</label> 
+                <label class="rental-label start" for="start-date">Start Date:</label>
                 <input id="start-date" type="date" onchange="getDays()">
+                <label class="rental-label end" for="end-date">End Date:</label>
                 <input id="end-date" type="date" onchange="getDays()">
                 <input name="days" id="hidden-days" type="hidden">
                 <input class="submit" type="submit" value="Rent this Pet!">
-              
             </form>
         </div>    
     </main>
