adds github link

--- a/user/user.html
+++ b/user/user.html
@@ -24,7 +24,7 @@
         <summary class="authors">
             <p class="footer-items"><span class="authors"><a  href="https://www.linkedin.com/in/tjbachorz/">TJ Bachorz</a></span> -  Authors  - <span class="authors"><a href="https://www.linkedin.com/in/bryan-oyloe">Bryan Oyloe</a></span></p>
         </summary>
-        <p class="footer-items">Github</p> 
+        <p class="footer-items"><a class="link" href="https://github.com/boyloe/Pet-rental-front-end">Github</a></p> 
     </footer>
 </body>
 </html>
