CSS touches to new seeds

--- a/pets/pets.html
+++ b/pets/pets.html
@@ -21,6 +21,8 @@
             <select id="species-select" name="species">
                 <option value="Dog">Dog</option>
                 <option value="Cat">Cat</option>
+                <option value="Bird">Bird</option>
+                <option value="Rabbit">Rabbit</option>
             </select>
             <input type="submit" class="submit" value="Filter Pets">
         </form>
