--- a/pet/pet.html
+++ b/pet/pet.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title id="title">Rent this pet!</title>
     <script defer src="showPet.js"></script>
     <link rel="stylesheet" href= "../pet/pet.css">
     <link rel="icon" type="image/png" href="https://www.freepngimg.com/download/cat/35425-9-black-cat-transparent.png">
