--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Pet Rental</title>
+        <title>Pet-Renter Home</title>
         <script src="./index.js" defer></script>
         <link rel="stylesheet" href="./app.css">
         <link rel="icon" type="image/png" href="https://www.freepngimg.com/download/cat/35425-9-black-cat-transparent.png">
