--- a/user/user.html
+++ b/user/user.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title id="title">User History</title>
     <script defer src='./user.js'></script>
     <link rel="stylesheet" href="../user/user.css">
     <link rel="icon" type="image/png" href="https://www.freepngimg.com/download/cat/35425-9-black-cat-transparent.png">
