fixes links for deployment

--- a/pet/pet.html
+++ b/pet/pet.html
@@ -15,7 +15,7 @@
     </section>
     <main>
         <div class="rental-form-container">
-            <form class="rental-form" method="POST" action=http://localhost:3000/rentals id="rental-submission">
+            <form class="rental-form" method="POST" action="https://pet-renter-back-end.herokuapp.com/rentals" id="rental-submission">
                 <label class="rental-label">How many days would you like to rent this pet?</label> 
                 <label class="rental-label start" for="start-date">Start Date:</label>
                 <input id="start-date" type="date" onchange="getDays()">
