--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
         
         <main>
             <section class="user-forms">
-                <form class="existing-user" method="GET" action="http://localhost:3001/user/user.html">
+                <form class="existing-user" method="GET" action="https://pet-renter.web.app/user/user.html">
                     <label class="label bar" for="user-select">Existing User? Select Your Username:  </label>
                     <select id="user-select" class="select line" name="user_id"></select>
                     <input class="submit" type="submit" value="Log-in">
                 </form>
-                <form class="new-user" method="POST" action="http://localhost:3000/users">
+                <form class="new-user" method="POST" action="https://pet-renter-back-end.herokuapp.com/users">
                     <label class="label bar" for="new-user">New User? Create a New Username:  </label>
                     <input id="new-user" class="input line" name="name" type="text" placeholder="Username">
                     <input class="submit" type="submit" value="Create New User">
